--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -13,7 +13,7 @@ output:
 
 This class was originally designed to help students prepare research proposals. It has undergone various modifications since its inception, as different instructors have been placed in charge of it, and as the needs of students have changed. The course still includes the development of scientific ideas into coherent proposals, but it now also addresses other forms of communication, and aspects of professional development to help graduate students during and after their time at the University of Washington.
 
-Before one can write a scientific proposal, one needs to know how scientific papers are conceptualized and written, as they are the basic template for proposals. Accordingly, the class will include the elements of crafting scientific papers, and each student will choose one to examine closely. This will clarify many lessons related to the structure of scientific papers, and the use of published literature and other sources of data and information. Scientific papers typically result from formal or informal proposals, and knowing how papers are written helps inform the process of developing proposals.
+Before you can write a scientific proposal, you need to know how scientific papers are conceptualized and written, as they are the basic template for proposals. Accordingly, the class will include the elements of crafting scientific papers, and each student will choose one to examine closely. This will clarify the structure of scientific papers, and the use of published literature and other sources of data and information. Scientific papers typically result from formal or informal proposals, and knowing how papers are written helps inform the process of developing proposals.
 
 Proposal development starts with an idea, which is then placed in the context of what is already known, and the needs in the scientific community and society at large for further information. Students will go through this process, learning the mechanics of proposal writing, and providing constructive feedback on written and oral presentations of student proposals.
 
@@ -41,10 +41,10 @@ By the end of the quarter, students should be able to:
 
 # Instructor
 
-[**Mark Scheuerell**](https://fish.uw.edu/faculty/mark-scheuerell/)  
+[**Chelsea Wood**](https://fish.uw.edu/faculty/chelsea-wood/)  
 Associate Professor, School of Aquatic & Fishery Sciences  
-220A FSH
-[scheuerl@uw.edu](mailto:scheuerl@uw.edu)
+FISH 318B
+[chelwood@uw.edu](mailto:chelwood@uw.edu)
 
 <br>
 
@@ -69,7 +69,7 @@ None.
 
 I am dedicated to providing a welcoming and supportive learning environment for all students, regardless of their background, identity, physical appearance, or manner of communication. Any form of language or behavior used to exclude, intimidate, or cause discomfort will not be tolerated. This applies to all course participants (instructor, students, guests). In order to foster a positive and professional learning environment, I ask the following:
 
-* Please let me know if you have a name or set of preferred pronouns that you would like me to use
+* Please let me know what name and pronouns I should use when I address you
 
 * Please let me know if *anyone* in class says something that makes you feel uncomfortable<sup>[[1](#endnotes)]</sup>
 
@@ -95,7 +95,7 @@ Please know that if you choose to disclose information to me about sex- or gende
 
 * **Confidential**: [Confidential advocates](https://www.washington.edu/sexualassault/support/advocacy/) will not share information with others unless given express permission by the person who has experienced the harm or when required by law.
 
-* **Private and/or anonymous**: [SafeCampus](SafeCampus) provides consultation and support and can connect you with additional resources if you want them.You can contact SafeCampus anonymously or share limited information when you call.
+* **Private and/or anonymous**: [SafeCampus](SafeCampus) provides consultation and support and can connect you with additional resources if you want them. You can contact SafeCampus anonymously or share limited information when you call.
 
 Please note that some senior leaders and other specified employees have been identified as "[Officials Required to Report](https://www.washington.edu/titleix/title-ix-officials-required-to-report/)". If an Official Required to Report learns of possible sex- or gender-based violence or harassment, they are required to call SafeCampus and report all the details they have in order to ensure that the person who experienced harm is offered support and reporting options.  
 
@@ -117,19 +117,19 @@ Students who expect to miss class or assignments as a consequence of their relig
 
 # Excused absence
 
-Students are expected to attend class and to participate in all graded activities. A student who is anticipating being absent from class due to a Religious Accommodation activity needs to complete the Religious Accommodations request process by the second Friday of the quarter. Students who anticipate missing class due to attendance at academic conferences or field trips, or participation in university-sponsored activities should provide a written notice to the instructor ahead of the absence. The instructor will determine if the graded activity or exam can be rescheduled or if there is equivalent work that can be done as an equivalent, as determined by the instructor.
+Students are expected to attend class and to participate in all graded activities. A student who is anticipating being absent from class due to a Religious Accommodation activity needs to complete the Religious Accommodations request process by the second Friday of the quarter. Students who anticipate missing class due to attendance at academic conferences or field trips, or participation in university-sponsored activities should provide a written notice to the instructor ahead of the absence. The instructor will determine if the graded activity can be rescheduled or if there is equivalent work that can be done as an equivalent, as determined by the instructor.
 
 <br>
 
 # Technology
 
-This course will revolve around hands-on computing exercises that demonstrate the topics of interest. Therefore, students are strongly recommended to bring their own laptop to class, although students are certainly free to work with one another. **For students without access to a personal laptop**: it is possible to check out UW laptops for an entire quarter (see the [Student Services office](https://education.uw.edu/admissions/office-of-student-services) for details).
+This course will revolve around hands-on exercises that demonstrate the topics of interest. Therefore, students are strongly recommended to bring their own laptop to class, although students are certainly free to work with one another. **For students without access to a personal laptop**: it is possible to check out UW laptops for an entire quarter (see the [Student Services office](https://education.uw.edu/admissions/office-of-student-services) for details).
 
 <br>
 
 # Teaching methodology
 
-This course will introduce new material primarily through prepared slides and hands-on demonstrations. Students will be expected to work both individually and collaboratively (to the extent possible given the current conditions); course content and evaluation will emphasize the communication of ideas and the ability to think critically more so than a specific pathway or method. Other areas of this website provide an overview of the topics to be covered, including links to weekly reading assignments, lecture materials, and homework assignments.
+This course will introduce new material primarily through prepared slides and hands-on demonstrations. Students will be expected to work both individually and collaboratively; course content and evaluation will emphasize the communication of ideas and the ability to think critically more so than a specific pathway or method. Other areas of this website provide an overview of the topics to be covered, including links to weekly reading assignments, lecture materials, and homework assignments.
 
 <br>
 
@@ -143,11 +143,11 @@ This course will involve a *lot* of communication between and among students and
 
 Students will be evaluated on their knowledge of course content and their ability to communicate their understanding of the material via individual homework assignments. There will be 7 homework assignments, each with varying weight on your final grade. Please note, **all assignments must be turned in to achieve a passing grade**.
 
-Homework will be assigned each Monday and will be due by 1:30 PM the following Monday, with the exception of the final assignment, which will be due by 11:59 PM on March 13. Late homework will be assessed a penalty of 10% per day. The instructor will evaluate and return student homework assignments within one week of their due date. **If for some reason you cannot meet the homework deadline, contact the instructor as soon as possible to discuss other options**. Please see the [Homework](homework.html) page for more details.
+Homework will be assigned each Monday and will be due by 1:30 PM the following Monday, with the exception of the final assignment, which will be due by 11:59 PM on March 17. Late homework will not be accepted. The instructor will evaluate and return student homework assignments within one week of their due date. **If for some reason you cannot meet the homework deadline, contact the instructor as soon as possible to discuss other options**. Please see the [Homework](homework.html) page for more details.
 
 ### Participation
 
-This course will require students to engage with the instructor and one another in small groups. I expect all students to contribute to our discussions and I will use random call-outs as a means for hearing from everyone. 
+This course will require students to engage with the instructor and one another in small groups. I expect all students to contribute to our discussions and I will call on students in class in order to ensure that we hear from everyone. 
 
 <br>
 
@@ -157,19 +157,9 @@ Faculty and students at the University of Washington are expected to maintain th
 
 <br>
 
-# COVID-19 Health and Safety
-
-To report a positive COVID-19 test result, close contact exposure or a related issue, follow the [COVID-19 Public Health Guidance and Requirements Flowchart](https://www.ehs.washington.edu/system/files/resources/COVID-19-public-health-flowchart.pdf) and notify EHS via [email](covidehc@uw.edu) or call 206.616.3344. For additional information, please see the [FAQ](https://www.washington.edu/coronavirus/student-faq/).
-
-### Face Coverings in the Classroom
-
-The health and safety of the University of Washington community are the institution's priorities. Please review and adhere to the [UW COVID Face Covering Policy](https://www.ehs.washington.edu/system/files/resources/COVID-19-face-cover-policy.pdf).
-
-<br>
-
 # Mental health
 
-We are in the midst of an historic pandemic that is creating a variety of challenges for everyone. If you should feel like you need some help, please consider the following resources available to students.
+If you need help, please consider the following resources available to students.
 
 **If you are experiencing a life-threatening emergency, please dial 911**.  
 
