--- a/docs/homework/week_10/hw_08_proposal.Rmd
+++ b/docs/homework/week_10/hw_08_proposal.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Final proposal"
-subtitle: "Homework #8"
+subtitle: "Homework #7"
 author: "FISH 521 - Proposal Writing and Professional Development"
-date: "4 March 2024"
+date: "3 March 2024"
 output:
   html_document:
     theme: cerulean
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Background
 
-Your final assignment for the course is to complete a full draft of a research proposal, building off of the introductory material you wrote for assignment #3. Some of you do not yet have fully formed research projects, so please do the best you can at this point, just as you did with your presentation. Mark will be looking for well-formed ideas, rationale, and methods, as well as improvement in your writing from your first draft.
+Your final assignment for the course is to complete a full draft of a research proposal, building off of the introductory material you wrote for Homework #3. Some of you do not yet have fully formed research projects, so please do the best you can at this point, just as you did with your presentation. Chelsea will be looking for well-formed ideas, rationale, and methods, as well as improvement in your writing from your first draft.
 
 
 ## Instructions
@@ -64,6 +64,6 @@ Write a full draft of your research proposal with the following general structur
 
 ## Submission
 
-When you are finished, attach your Word document to an email or provide a link to a Google document, such that Mark will be able to provide comments directly on the draft itself.
+When you are finished, submit via Canvas a Word document or a link to a Google Document, such that Chelsea will be able to provide comments directly on the draft itself.
 
 
